--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
       - name: Install protoc
         run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
       - uses: dtolnay/rust-toolchain@stable
-        with: { components: clippy, rustfmt }
+        with:
+    components: clippy, rustfmt
       - uses: Swatinem/rust-cache@v2
       - run: cargo build --verbose
       - run: cargo test --all --verbose
