--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,55 @@
 name: CI
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+
 jobs:
   build-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Install protoc
         run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
       - uses: dtolnay/rust-toolchain@stable
-        with: { components: clippy, rustfmt }
+        with:
+          components: clippy, rustfmt
+
       - uses: Swatinem/rust-cache@v2
-      - run: cargo build --verbose
-      - run: cargo test --all --verbose
-      - run: cargo fmt --all -- --check
-      - run: cargo clippy --all-targets -- -D warnings
+
+      - name: Build
+        run: cargo build --verbose
+
+      - name: Test
+        run: cargo test --all --verbose
+
+      - name: Format check
+        run: cargo fmt --all -- --check
+
+      - name: Clippy (deny warnings)
+        run: cargo clippy --all-targets -- -D warnings
+
   fuzz-smoke:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Install deps
         run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
       - uses: dtolnay/rust-toolchain@nightly
+
       - uses: Swatinem/rust-cache@v2
-      - run: cargo install cargo-fuzz
-      - run: cargo +nightly fuzz run frame_decode -- -max_total_time=20 -print_final_stats=1
-      - if: always()
+
+      - name: Install cargo-fuzz
+        run: cargo install cargo-fuzz
+
+      - name: Run fuzz smoke (20s)
+        run: cargo +nightly fuzz run frame_decode -- -max_total_time=20 -print_final_stats=1
+
+      - name: Upload fuzz artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: fuzz-output
