--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: CI
 on:
   push:
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 jobs:
   build-test:
@@ -14,12 +16,8 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@stable
         with:
-<<<<<<< HEAD
-    components: clippy, rustfmt
-=======
-          components: clippy, rustfmt
+          components: [clippy, rustfmt]
 
->>>>>>> origin/master
       - uses: Swatinem/rust-cache@v2
 
       - name: Build
