ci-summary: fix YAML (no heredocs), JUnit+coverage gates

--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -2,7 +2,7 @@ name: CI Summary
 
 on:
   workflow_run:
-    workflows: ["CI"]         # ← exact name of your main workflow
+    workflows: ["CI"]   # must match your main workflow's name exactly
     types: [completed]
 
 jobs:
@@ -12,32 +12,42 @@ jobs:
       actions: read
       contents: read
       checks: write
+
     steps:
       - name: Download artifacts from triggering run
         uses: dawidd6/action-download-artifact@v2
         with:
           run_id: ${{ github.event.workflow_run.id }}
-          name: "*"                 # download all artifacts
-          path: artifacts           # ends up like artifacts/junit/junit.xml, artifacts/coverage-lcov/lcov.info
+          name: "*"
+          path: artifacts
           if_no_artifact_found: warn
 
       - name: Summarize JUnit (and gate on failures)
+        shell: bash
         run: |
-          python3 - <<'PY' | tee -a "$GITHUB_STEP_SUMMARY"
-import xml.etree.ElementTree as ET, sys, os
-p = 'artifacts/junit/junit.xml'
-if not os.path.isfile(p):
-    print("JUnit: not found"); sys.exit(0)
-root = ET.parse(p).getroot()
-T=F=E=S=0
-for ts in root.iter('testsuite'):
-    T+=int(ts.get('tests',0)); F+=int(ts.get('failures',0))
-    E+=int(ts.get('errors',0)); S+=int(ts.get('skipped',0))
-print(f"JUnit: {T} tests, {F} failures, {E} errors, {S} skipped")
-sys.exit(1 if F>0 or E>0 else 0)
-PY
+          f="artifacts/junit/junit.xml"
+          if [ ! -f "$f" ]; then
+            echo "JUnit: not found" | tee -a "$GITHUB_STEP_SUMMARY"
+            exit 0
+          fi
+          read T F E S < <(awk -v FS='[=\" ]' '
+            /<testsuite /{
+              for(i=1;i<=NF;i++){
+                if($i=="tests")    T+=$(i+1)
+                if($i=="failures") F+=$(i+1)
+                if($i=="errors")   E+=$(i+1)
+                if($i=="skipped")  S+=$(i+1)
+              }
+            }
+            END{ if(!T)T=0;if(!F)F=0;if(!E)E=0;if(!S)S=0; printf("%d %d %d %d",T,F,E,S) }
+          ' "$f")
+          echo "JUnit: $T tests, $F failures, $E errors, $S skipped" | tee -a "$GITHUB_STEP_SUMMARY"
+          if [ "$F" -gt 0 ] || [ "$E" -gt 0 ]; then
+            exit 1
+          fi
 
       - name: Coverage summary (+ gate at 20%)
+        shell: bash
         run: |
           f="artifacts/coverage-lcov/lcov.info"
           if [ ! -f "$f" ]; then
