--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -1,19 +1,17 @@
 name: CI Summary
-
 on:
   workflow_run:
-    workflows: ["CI"]   # must match your main workflow's name exactly
+    workflows: ["CI"]
     types: [completed]
 
 jobs:
   aggregate:
-    if: github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.head_branch == 'main'
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
       checks: write
-
     steps:
       - name: Download artifacts from triggering run
         uses: dawidd6/action-download-artifact@v2
@@ -23,38 +21,26 @@ jobs:
           path: artifacts
           if_no_artifact_found: warn
 
-      - name: Summarize JUnit (and gate on failures)
+      - name: JUnit summary
         shell: bash
         run: |
           f=$(find artifacts -type f -name junit.xml | head -n1)
-          if [ ! -f "$f" ]; then
+          if [ -z "$f" ]; then
             echo "JUnit: not found" | tee -a "$GITHUB_STEP_SUMMARY"
             exit 0
           fi
-          read T F E S < <(awk -v FS='[=\" ]' '
-            /<testsuite /{
-              for(i=1;i<=NF;i++){
-                if($i=="tests")    T+=$(i+1)
-                if($i=="failures") F+=$(i+1)
-                if($i=="errors")   E+=$(i+1)
-                if($i=="skipped")  S+=$(i+1)
-              }
-            }
-            END{ if(!T)T=0;if(!F)F=0;if(!E)E=0;if(!S)S=0; printf("%d %d %d %d",T,F,E,S) }
-          ' "$f")
+          read T F E S < <(awk -v FS='[=\" ]' '/<testsuite /{for(i=1;i<=NF;i++){if($i=="tests")T+=$(i+1);if($i=="failures")F+=$(i+1);if($i=="errors")E+=$(i+1);if($i=="skipped")S+=$(i+1)}} END{printf("%d %d %d %d",T+0,F+0,E+0,S+0)}' "$f")
           echo "JUnit: $T tests, $F failures, $E errors, $S skipped" | tee -a "$GITHUB_STEP_SUMMARY"
-          if [ "$F" -gt 0 ] || [ "$E" -gt 0 ]; then
-            exit 1
-          fi
+        continue-on-error: true
 
-      - name: Coverage summary (+ gate at 10%)
+      - name: Coverage summary
         shell: bash
         run: |
           f=$(find artifacts -type f -name lcov.info | head -n1)
-          if [ ! -f "$f" ]; then
+          if [ -z "$f" ]; then
             echo "Coverage: not found" | tee -a "$GITHUB_STEP_SUMMARY"
             exit 0
           fi
-          pct=$(awk -F, '/^DA:/{t++; if ($2>0) c++} END { if(t) printf("%.2f",100*c/t); else print 0 }' "$f")
+          pct=$(awk -F, '/^DA:/{t++; if ($2>0) c++} END{if(t) printf("%.2f",100*c/t); else print 0}' "$f")
           echo "Line coverage: ${pct}%" | tee -a "$GITHUB_STEP_SUMMARY"
-          awk -v p="$pct" 'BEGIN{ exit (p>=10)?0:1 }'
+        continue-on-error: true
