fmt: run rustfmt to satisfy CI format check

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,14 @@ axum = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 rand = "0.8"
+tower-http = { version = "0.5", features = ["trace"] }
+opentelemetry-otlp = { version = "0.30", features = ["http", "http-proto", "reqwest-blocking-client", "tonic"] }
+ctrlc = "3.4.7"
+opentelemetry = "0.30"
+opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
+tracing-opentelemetry = "0.31"
 
 [build-dependencies]
 prost-build = "0.12"
