--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -24,15 +24,19 @@ jobs:
       - name: JUnit summary
         shell: bash
         run: |
-          f=$(find artifacts -type f -name junit.xml | head -n1)
-          if [ -z "$f" ]; then
+          shopt -s nullglob
+          mapfile -t files < <(find artifacts -type f -name junit.xml)
+          if [ ${#files[@]} -eq 0 ]; then
             echo "JUnit: not found" | tee -a "$GITHUB_STEP_SUMMARY"
             exit 0
           fi
-          read T F E S < <(awk -v FS='[=\" ]' '/<testsuite /{for(i=1;i<=NF;i++){if($i=="tests")T+=$(i+1);if($i=="failures")F+=$(i+1);if($i=="errors")E+=$(i+1);if($i=="skipped")S+=$(i+1)}} END{printf("%d %d %d %d",T+0,F+0,E+0,S+0)}' "$f")
+          T=0; F=0; E=0; S=0
+          for f in "${files[@]}"; do
+            read t ff ee ss < <(awk -v FS='[=" ]' '/<testsuite /{for(i=1;i<=NF;i++){if($i=="tests")tt+=$(i+1);if($i=="failures")ff+=$(i+1);if($i=="errors")ee+=$(i+1);if($i=="skipped")ss+=$(i+1)}}END{printf("%d %d %d %d",tt+0,ff+0,ee+0,ss+0)}' "$f")
+            T=$((T+t)); F=$((F+ff)); E=$((E+ee)); S=$((S+ss))
+          done
           echo "JUnit: $T tests, $F failures, $E errors, $S skipped" | tee -a "$GITHUB_STEP_SUMMARY"
-        continue-on-error: true
-
+          if [ "$F" -gt 0 ] || [ "$E" -gt 0 ]; then exit 1; fi
       - name: Coverage summary
         shell: bash
         run: |
