--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -4,22 +4,24 @@ on:
     workflows: ["CI"]
     types: [completed]
 
+permissions:
+  actions: read
+  contents: read
+
 jobs:
   aggregate:
-    if: github.event.workflow_run.head_branch == 'main'
+    if: ${{ github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      checks: write
     env:
-      COVERAGE_MIN: "10"   
+      # Fail the job if coverage falls below this percent
+      COVERAGE_MIN: "10"
 
     steps:
       - name: Download artifacts from triggering run
         uses: dawidd6/action-download-artifact@v2
         with:
           run_id: ${{ github.event.workflow_run.id }}
+          # download ALL artifacts from the CI run
           path: artifacts
           if_no_artifact_found: warn
 
@@ -47,24 +49,26 @@ for p in paths:
     except Exception:
         continue
     for ts in root.iter('testsuite'):
-        T += int(ts.get('tests', 0) or 0)
-        F += int(ts.get('failures', 0) or 0)
-        E += int(ts.get('errors', 0) or 0)
-        S += int(ts.get('skipped', 0) or 0)
+        T += int(ts.get('tests')    or 0)
+        F += int(ts.get('failures') or 0)
+        E += int(ts.get('errors')   or 0)
+        S += int(ts.get('skipped')  or 0)
 
 print(f"JUnit: {T} tests, {F} failures, {E} errors, {S} skipped")
 sys.exit(1 if F > 0 or E > 0 else 0)
 PY
 
-      - name: Coverage summary
+      - name: Coverage summary (aggregate all lcovs)
         if: ${{ always() }}
         shell: bash
         run: |
-          f=$(find artifacts -type f -name lcov.info | head -n1)
-          if [ -z "$f" ]; then
-            echo "Coverage: not found" | tee -a "$GITHUB_STEP_SUMMARY"
+          set -euo pipefail
+          shopt -s globstar nullglob
+          files=(artifacts/**/lcov.info)
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "Line coverage: n/a" | tee -a "$GITHUB_STEP_SUMMARY"
             exit 0
           fi
-          pct=$(awk -F, '/^DA:/{t++; if ($2>0) c++} END{ if(t) printf("%.2f",100*c/t); else print 0 }' "$f")
+          pct=$(awk -F, '/^DA:/{t++; if ($2>0) c++} END{ if(t) printf("%.2f",100*c/t); else print 0 }' "${files[@]}")
           echo "Line coverage: ${pct}%" | tee -a "$GITHUB_STEP_SUMMARY"
-          awk -v p="$pct" -v m="${COVERAGE_MIN}" 'BEGIN{ exit (p>=m)?0:1 }'
+          awk -v p="$pct" -v min="${COVERAGE_MIN:-10}" 'BEGIN{ exit (p+0 >= min+0) ? 0 : 1 }'
